--- a/in-class-assignment/Base.lproj/Main.storyboard
+++ b/in-class-assignment/Base.lproj/Main.storyboard
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.13.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.9"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Photorama-->
+        <scene sceneID="XPZ-79-Sdc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="Q6l-XA-Tl9" customClass="PhotosViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tx5-YU-CCa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ry7-hz-E3i">
+                                <rect key="frame" x="0.0" y="56" width="375" height="611"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="Ry7-hz-E3i" firstAttribute="leading" secondItem="tx5-YU-CCa" secondAttribute="leading" id="Xxg-cb-mKw"/>
+                            <constraint firstItem="Ry7-hz-E3i" firstAttribute="bottom" secondItem="1Sn-0B-hT8" secondAttribute="bottom" id="hWT-ul-ffa"/>
+                            <constraint firstAttribute="trailing" secondItem="Ry7-hz-E3i" secondAttribute="trailing" id="m8r-hd-vC7"/>
+                            <constraint firstItem="1Sn-0B-hT8" firstAttribute="top" secondItem="Ry7-hz-E3i" secondAttribute="top" constant="8" id="yhq-2o-921"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1Sn-0B-hT8"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Photorama" id="ASz-qd-lww"/>
+                    <connections>
+                        <outlet property="imageView" destination="Ry7-hz-E3i" id="g3u-ME-JHE"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="axW-aI-Ff9" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1132" y="56"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gZa-7j-vtp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TqV-cL-qQy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tZ1-7u-SYv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Q6l-XA-Tl9" kind="relationship" relationship="rootViewController" id="wMN-cS-Otg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CMO-oq-Ugd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="278" y="57"/>
         </scene>
     </scenes>
 </document>
